sync - suspect: this was just to get AWS maching going

--- a/contrib/split-cuda/test/Makefile
+++ b/contrib/split-cuda/test/Makefile
@@ -1,7 +1,7 @@
 # NOTE: Update the following variables for your system
 CC=gcc
 CXX=g++
-NVCC=/usr/local/cuda/bin/nvcc
+NVCC=/usr/bin/nvcc
 LD=${CXX}
 CUDA_INCLUDE_PATH=/usr/local/cuda/include/
 
